--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-10-13 21:48+0100\n"
-"PO-Revision-Date: 2017-09-20 19:30+0100\n"
+"PO-Revision-Date: 2017-10-13 22:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 2.0.4\n"
 
 #: mymwebsite/templates/base.html:76 mymwebsite/templates/innerbase.html:123
 msgid "About"
@@ -1331,14 +1331,9 @@ msgid "Simple and evidenced control."
 msgstr "Controlo simples e evidenciado."
 
 #: mymwebsite/templates/index.html:114
-#, fuzzy
-#| msgid ""
-#| " Use images to control everything remotely <br> using an Android "
-#| "smartphone."
 msgid " Use images to survey everything remotely using an Android smartphone."
 msgstr ""
-" Usar imagens para controlar tudo remotamente<br> usando um smartphone "
-"Android."
+" Usar imagens para fiscalizar tudo remotamente usando um telemóvel Android."
 
 #: mymwebsite/templates/index.html:117 mymwebsite/templates/index.html:188
 #: mymwebsite/templates/index.html:344 mymwebsite/templates/index.html:372
@@ -1440,13 +1435,11 @@ msgstr ""
 
 #: mymwebsite/templates/index.html:199
 msgid "Service Users and Certified Location"
-msgstr ""
+msgstr "Usuários de Serviço e Localização Certificada"
 
 #: mymwebsite/templates/index.html:200
-#, fuzzy
-#| msgid "Turn captured images into certified information."
 msgid "Turn captured images into a certified path."
-msgstr "Transforme imagens capturadas em informações certificadas."
+msgstr "Transforme imagens capturadas em uma rota certificada."
 
 #: mymwebsite/templates/index.html:201
 msgid ""
@@ -1454,6 +1447,9 @@ msgid ""
 "setups! Just create a service user, pass the info to whoever you want to "
 "capture media into your account and it is working!"
 msgstr ""
+"Você receberá quando e onde sua mídia foi capturada. Tudo sem configurações "
+"complicadas! Basta criar um usuário de serviço, passar a informação para "
+"quem você quiser que capture mídia para a sua conta e já está!"
 
 #: mymwebsite/templates/index.html:226
 msgid "Build your own bigdata"
@@ -1577,10 +1573,8 @@ msgid " time and location"
 msgstr " horário e local"
 
 #: mymwebsite/templates/index.html:330
-#, fuzzy
-#| msgid " automatic sharing to Twitter and Email."
 msgid " automatic sharing to Twitter and Email"
-msgstr " partilhamento automático para Twitter e E-mail."
+msgstr " partilhamento automático para Twitter e E-mail"
 
 #: mymwebsite/templates/index.html:333
 msgid "AR"
@@ -1605,11 +1599,11 @@ msgstr "Mobile App"
 
 #: mymwebsite/templates/index.html:336
 msgid " download the MyMensorAR app an use it!"
-msgstr ""
+msgstr " descarrega a aplicação MyMensorAR e use!"
 
 #: mymwebsite/templates/index.html:339
 msgid " up to five installs per user"
-msgstr ""
+msgstr " até cinco instalações por conta"
 
 #: mymwebsite/templates/index.html:359
 msgid ""
@@ -1686,17 +1680,6 @@ msgid "Last revision on June 2nd 2017."
 msgstr "Última revisão em 2 de junho de 2017."
 
 #: mymwebsite/templates/privacy.html:10
-#, fuzzy
-#| msgid ""
-#| "This Privacy Policy sets forth MyMensor's policy with respect to "
-#| "information including\n"
-#| "        personally identifiable data and other information that is "
-#| "collected from visitors to the Site and Services.\n"
-#| "        This privacy policy governs your use of a software application "
-#| "(“Service”), including both a Mobile app running\n"
-#| "        on mobile devices, and a Website application that runs on both "
-#| "mobile and desktop/laptop devices, that was\n"
-#| "        created by Celtapps Software. "
 msgid ""
 "This Privacy Policy sets forth MyMensor's policy with respect to "
 "information\n"
@@ -1722,20 +1705,6 @@ msgid "Information collected and its use"
 msgstr "Informações coletadas e seu uso"
 
 #: mymwebsite/templates/privacy.html:17
-#, fuzzy
-#| msgid ""
-#| "The Service obtains the information you provide when you download and "
-#| "register the Service\n"
-#| "        (“User Provided Data”). Registration is required to use our "
-#| "Service. When you register with us and use the\n"
-#| "        Service, you provide: (a) an email address, an username and a "
-#| "password; (b) information you provide us when you\n"
-#| "        contact us for help, and; (c) information you enter into our "
-#| "system when using the Service, such as images,\n"
-#| "        videos, remarks and numerical data. We may also use the "
-#| "information you provided us to contact you from time to\n"
-#| "        time to provide you with important information, required notices "
-#| "and marketing promotions."
 msgid ""
 "The Service obtains the information you provide when you download and\n"
 "        register the Service\n"
@@ -1762,17 +1731,6 @@ msgstr ""
 "fornecer informações importantes, avisos exigidos e promoções de marketing."
 
 #: mymwebsite/templates/privacy.html:25
-#, fuzzy
-#| msgid ""
-#| "In addition, the Service may collect certain information automatically "
-#| "(“Collected\n"
-#| "        Information”), such as the type of mobile device you use, your "
-#| "mobile devices unique device ID, the IP address\n"
-#| "        of your device, the geographic location of your device, your "
-#| "operating system, the type of Internet browsers you\n"
-#| "        use, and information about the way you use the Service. Sometimes "
-#| "we aggregate user data anonymously to\n"
-#| "        understand our customer base better."
 msgid ""
 "In addition, the Service may collect certain information automatically\n"
 "        (“Collected\n"
@@ -1794,15 +1752,6 @@ msgstr ""
 "clientes."
 
 #: mymwebsite/templates/privacy.html:31
-#, fuzzy
-#| msgid ""
-#| "This Service collects information about the location of your device. We "
-#| "use your location\n"
-#| "        information to provide location certification services. You may "
-#| "at any time stop us from further allowing us to\n"
-#| "        have access to your location data by disabling location services "
-#| "entirely, or specifically for the app, inside\n"
-#| "        our app or on your mobile device."
 msgid ""
 "This Service collects information about the location of your device. We use\n"
 "        your location\n"
@@ -1824,20 +1773,6 @@ msgid "Data Retention Policy; Managing Your Information"
 msgstr "Política de Retenção de Dados; Gerenciamento de Suas Informações"
 
 #: mymwebsite/templates/privacy.html:37
-#, fuzzy
-#| msgid ""
-#| "We will retain User Provided data for as long as you use the Service and "
-#| "for a reasonable\n"
-#| "        time thereafter. If you’d like to delete User Provided Data that "
-#| "you have provided via the Service, you can do\n"
-#| "        so inside our mobile app and inside our web app, for the relevant "
-#| "portions of information, furthermore, if you\n"
-#| "        want to completely wipe all information from our servers please "
-#| "contact us at support@mymensor.com and we will\n"
-#| "        respond in a reasonable time. Please note that some or all of the "
-#| "User Provided Data may be required in order\n"
-#| "        for the Service to function properly, and we may be required to "
-#| "retain certain information by law."
 msgid ""
 "We will retain User Provided data for as long as you use the Service and "
 "for\n"
@@ -1870,17 +1805,6 @@ msgid "Third-Party Payment Processor"
 msgstr "Processador Externo de Pagamentos"
 
 #: mymwebsite/templates/privacy.html:46
-#, fuzzy
-#| msgid ""
-#| "We use a third party payment processor to process payments made to us. In "
-#| "connection with\n"
-#| "        the processing of such payments, we do not retain any personally "
-#| "identifiable information or any financial\n"
-#| "        information such as credit card numbers. All such information is "
-#| "provided directly to our third party processor,\n"
-#| "        whose use of your personal information is governed by their "
-#| "privacy policy (https://www.paypal.com/pt/webapps/mpp/ua/privacy-full?"
-#| "locale.x=en_PT)."
 msgid ""
 "We use a third party payment processor to process payments made to us. In\n"
 "        connection with\n"
@@ -1906,25 +1830,6 @@ msgid "Third parties access to information obtained by the Service"
 msgstr "Acesso de Terceiros às Informações Obtidas pelo Serviço"
 
 #: mymwebsite/templates/privacy.html:53
-#, fuzzy
-#| msgid ""
-#| "We will share your information with third parties only in the ways that "
-#| "are described in\n"
-#| "        this privacy statement. We may disclose collected Information, in "
-#| "the following manners: (a) as required by law,\n"
-#| "        such as to comply with a subpoena, or similar legal process; (b) "
-#| "when we believe in good faith that disclosure\n"
-#| "        is necessary to protect our rights, protect your safety or the "
-#| "safety of others, investigate fraud, respond to a\n"
-#| "        government request, act in urgent circumstances to protect the "
-#| "personal safety of our users or the public, or\n"
-#| "        protect against legal liability; (c) if Celtapps Software is "
-#| "involved in a merger, acquisition, or sale of all\n"
-#| "        or a portion of its assets, you will be notified via email and/or "
-#| "a prominent notice on our Web site of any\n"
-#| "        change in ownership or uses of this information, as well as any "
-#| "choices you may have regarding this\n"
-#| "        information."
 msgid ""
 "We will share your information with third parties only in the ways that are\n"
 "        described in\n"
@@ -1981,22 +1886,26 @@ msgid ""
 "may adversely affect the availability and\n"
 "        functionality of our websites and the services we can provide to you."
 msgstr ""
+"Os cookies são pequenos pedaços de texto usados para armazenar informações "
+"em navegadores da web. Eles são usados por muitos sites para armazenar e "
+"receber identificadores e outras informações em dispositivos, como um "
+"telefone ou computador de mão. Nosso site e serviços usam cookies e outras "
+"tecnologias similares, a fim de oferecer um melhor atendimento e, em geral, "
+"melhorar nossos sites e serviços. Algumas partes dos nossos sites são "
+"funcionais sem cookies e você geralmente pode escolher se deseja aceitar "
+"cookies. A maioria dos navegadores da Web está configurada para aceitar os "
+"cookies por padrão, no entanto, você poderá excluir cookies por meio do "
+"gerenciador de cookies do navegador. Para fazer isso, siga as instruções "
+"fornecidas pelo seu navegador. Observe que a desativação de cookies "
+"redefinirá sua sessão, desativará o login automático e poderá afetar "
+"negativamente a disponibilidade e a funcionalidade de nossos sites e os "
+"serviços que podemos fornecer."
 
 #: mymwebsite/templates/privacy.html:73
 msgid "Children"
 msgstr "Crianças"
 
 #: mymwebsite/templates/privacy.html:74
-#, fuzzy
-#| msgid ""
-#| "One must be 13 years old to use MyMensor. We do not use the Service to "
-#| "knowingly solicit\n"
-#| "        data from or market to children under the age of 13. If a parent "
-#| "or guardian becomes aware that his or her child\n"
-#| "        has provided us with information without their consent, he or she "
-#| "should contact us at support@mymensor.com. We\n"
-#| "        will delete such information from our files within a reasonable "
-#| "time."
 msgid ""
 "One must be 13 years old to use MyMensor. We do not use the Service to\n"
 "        knowingly solicit\n"
@@ -2018,17 +1927,6 @@ msgid "Security"
 msgstr "Segurança"
 
 #: mymwebsite/templates/privacy.html:80
-#, fuzzy
-#| msgid ""
-#| "MyMensor takes reasonable steps to protect your information from loss, "
-#| "misuse, and\n"
-#| "        unauthorized access, disclosure, alteration, or destruction. "
-#| "However, no Internet or email transmission is ever\n"
-#| "        fully secure or error free. In particular, email sent to or from "
-#| "us may not be secure. Therefore, you should\n"
-#| "        take special care in deciding what information you send to us via "
-#| "email. Please keep this in mind when\n"
-#| "        disclosing any information to MyMensor."
 msgid ""
 "MyMensor takes reasonable steps to protect your information from loss,\n"
 "        misuse, and\n"
@@ -2053,12 +1951,6 @@ msgid "Contact"
 msgstr "Contato"
 
 #: mymwebsite/templates/privacy.html:87
-#, fuzzy
-#| msgid ""
-#| "If you have any questions regarding privacy while using the Service, or "
-#| "have questions about\n"
-#| "        our practices, please contact us via email at support@mymensor."
-#| "com."
 msgid ""
 "If you have any questions regarding privacy while using the Service, or "
 "have\n"
@@ -2450,17 +2342,6 @@ msgstr ""
 "perda."
 
 #: mymwebsite/templates/terms.html:108
-#, fuzzy
-#| msgid ""
-#| "(d) Cancellation and Termination: You are solely responsible for properly "
-#| "canceling your\n"
-#| "        User Account. An email or phone request to cancel your User "
-#| "Account is not considered cancellation. You can\n"
-#| "        cancel your User Account at any time in our Site. If you cancel "
-#| "your User Account before the end of your current\n"
-#| "        paid up month, your cancellation will take effect immediately, "
-#| "and you will not be charged again. But there will\n"
-#| "        not be any prorating of unused time in the last billing cycle."
 msgid ""
 "(d) Cancellation and Termination: You are solely responsible for properly "
 "canceling your\n"
@@ -2481,7 +2362,8 @@ msgstr ""
 "cancelar sua Conta de Usuário antes do final do seu mês de pagamento atual, "
 "seu cancelamento entrará em vigor imediatamente e você não será cobrado "
 "novamente. Mas não haverá prorrateamento do tempo não utilizado no último "
-"ciclo de cobrança."
+"ciclo de cobrança. No entanto, você poderá continuar usando os serviços até "
+"o final do último ciclo de cobrança."
 
 #: mymwebsite/templates/terms.html:113
 msgid ""
