--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-17 15:57+0100\n"
+"POT-Creation-Date: 2017-10-17 16:36+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,7 +37,7 @@ msgstr ""
 
 #: mymwebsite/templates/base.html:89 mymwebsite/templates/index.html:38
 #: mymwebsite/templates/index.html:86 mymwebsite/templates/innerbase.html:94
-#: mymwebsite/templates/innerbase.html:136
+#: mymwebsite/templates/innerbase.html:136 mymwebsite/templates/videos.html:6
 msgid "Videos"
 msgstr ""
 
@@ -77,43 +77,47 @@ msgstr ""
 msgid "Cases"
 msgstr ""
 
-#: mymwebsite/templates/cases.html:9
+#: mymwebsite/templates/cases.html:6
+msgid "MyMensor Use Cases"
+msgstr ""
+
+#: mymwebsite/templates/cases.html:11 mymwebsite/templates/cases.html:27
 #: mymwebsite/templates/cases/genusemediaplan.html:9
 msgid "Pinocchio sitting over a mobile phone."
 msgstr ""
 
-#: mymwebsite/templates/cases.html:11
+#: mymwebsite/templates/cases.html:13 mymwebsite/templates/cases.html:29
 msgid "General Use for MyMensor "
 msgstr ""
 
-#: mymwebsite/templates/cases.html:12
+#: mymwebsite/templates/cases.html:14 mymwebsite/templates/cases.html:30
 msgid "General purpose use for the MyMensor Media Plan"
 msgstr ""
 
-#: mymwebsite/templates/cases.html:17
+#: mymwebsite/templates/cases.html:19 mymwebsite/templates/cases.html:35
 #: mymwebsite/templates/cases/followingremotejobs.html:9
 msgid "Staging for producing a fake photo."
 msgstr ""
 
-#: mymwebsite/templates/cases.html:19
+#: mymwebsite/templates/cases.html:21 mymwebsite/templates/cases.html:37
 msgid "Following Jobs Remotely "
 msgstr ""
 
-#: mymwebsite/templates/cases.html:20
+#: mymwebsite/templates/cases.html:22 mymwebsite/templates/cases.html:38
 msgid ""
 "Following jobs remotely with the MyMensor Media Plan, Media and Data Plan"
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:7
 msgid ""
-"Following Jobs Remotely with the MyMensor Media Plan and Media and Data Plan"
+"Following Jobs Remotely with the MyMensor Media Plan, Media and Data Plan"
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:10
 msgid ""
 "I have a friend that is a very successful accountant in an European country. "
-"Once he told me a tale of a client who invested in the construction of an "
-"apartment building in Africa. "
+"Once he told me a tale of a client who <mark>invested in the construction of "
+"an apartment building in Africa.</mark> "
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:11
@@ -122,9 +126,10 @@ msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:12
 msgid ""
-"In the first one he had relied on photos sent to him via email to check the "
-"progress of the project, only going on site for the commencement and "
-"delivery of the building. So, he followed the same path in the second one."
+"In the first one <mark>he had relied on photos sent to him via email to "
+"check the progress of the project</mark>, only going on site for the "
+"commencement and delivery of the building. So, he followed the same path in "
+"the second one."
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:13
@@ -137,18 +142,18 @@ msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:14
 msgid ""
-"There was no second building! His money was gone and down there he "
-"discovered that he was targeted with a scam known to the locals. He needed a "
-"tool to protect him from that."
+"<mark>There was no second building!</mark> His money was gone and down there "
+"he discovered that he was targeted with a scam known to the locals. He "
+"needed a tool to protect him from that."
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:15
 msgid ""
-"Using just the MyMensor Media Plan one could follow the project headway "
-"remotely using the certified media. Going even deeper you could establish "
-"measuring criteria and using MyMensor Media and Data Plan follow up the "
-"different aspects of the construction using the tables and graphical "
-"MyMensor tools."
+"<mark>Using just the MyMensor Media Plan one could follow the project "
+"headway remotely using the certified media.</mark> Going even deeper you "
+"could establish measuring criteria and using MyMensor Media and Data Plan "
+"follow up the different aspects of the construction using the tables and "
+"graphical MyMensor tools."
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:16
@@ -160,8 +165,16 @@ msgstr ""
 msgid "Start your 30-day free-trial now. "
 msgstr ""
 
+#: mymwebsite/templates/cases/followingremotejobs.html:18
+#: mymwebsite/templates/cases/genusemediaplan.html:17
+msgid ""
+"<mark>No Credit Card is required during trial period</mark> and, even when "
+"you have subscribed, you can easily cancel at any time, just clicking a "
+"button!"
+msgstr ""
+
 #: mymwebsite/templates/cases/genusemediaplan.html:7
-msgid "General Purpose Use for the MyMensor Media Plan"
+msgid "General Purpose Use for the MyMensor Media&nbsp;Plan"
 msgstr ""
 
 #: mymwebsite/templates/cases/genusemediaplan.html:10
@@ -174,17 +187,18 @@ msgstr ""
 #: mymwebsite/templates/cases/genusemediaplan.html:11
 msgid ""
 "At that time, it seemed to be a good question, but as time passes it became "
-"abundantly clear that forgery in the online world has become epidemic. So, "
-"seeing a photo or video that was sent to you in the usual channels is not "
-"enough anymore, you need proof!"
+"abundantly clear that <mark>forgery in the online world has become epidemic."
+"</mark> So, seeing a photo or video that was sent to you in the usual "
+"channels is not enough anymore, you need proof!"
 msgstr ""
 
 #: mymwebsite/templates/cases/genusemediaplan.html:12
 msgid ""
-"One simple but defining feature of MyMensor is that you cannot insert any "
-"media into our system that was not produced by one of our mobile apps. So, "
-"what you see in a video or photo coming from MyMensor was actually made by a "
-"smartphone camera, with no tampering, modification, enhancing, you name it."
+"One simple but defining feature of MyMensor is that <mark>you cannot insert "
+"any media into our system that was not produced by our mobile app.</mark> "
+"So, what you see in a video or photo coming from MyMensor was actually made "
+"by a smartphone camera, with no tampering, modification, enhancing, "
+"whatever, you name it."
 msgstr ""
 
 #: mymwebsite/templates/cases/genusemediaplan.html:13
@@ -201,18 +215,12 @@ msgstr ""
 
 #: mymwebsite/templates/cases/genusemediaplan.html:15
 msgid ""
-"But there is a lot more to MyMensor Media: automatic filing, automatic "
-"sharing etc. So, look no further, "
+"But that is just the tip of he iceberg! There is a lot more to MyMensor "
+"Media: automatic filing, automatic sharing etc. So, look no further, "
 msgstr ""
 
 #: mymwebsite/templates/cases/genusemediaplan.html:17
-msgid "start your 30-day free-trial now. "
-msgstr ""
-
-#: mymwebsite/templates/cases/genusemediaplan.html:17
-msgid ""
-"No Credit Card is required during trial period and, even when you have "
-"subscribed, you can easily cancel at any time, just clicking a button!"
+msgid "start your 30-day free-trial now! "
 msgstr ""
 
 #: mymwebsite/templates/docs.html:6
@@ -2066,38 +2074,38 @@ msgstr ""
 msgid " to understand how MyMensor collects and uses personal information."
 msgstr ""
 
-#: mymwebsite/templates/videos.html:10 mymwebsite/templates/videos.html:16
+#: mymwebsite/templates/videos.html:8 mymwebsite/templates/videos.html:14
 msgid "Explainer Video"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:33
+#: mymwebsite/templates/videos.html:31
 msgid "Mobile App Videos"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:39
+#: mymwebsite/templates/videos.html:37
 msgid "First Steps"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:54 mymwebsite/templates/videos.html:108
+#: mymwebsite/templates/videos.html:52 mymwebsite/templates/videos.html:106
 msgid "Feature Tour"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:69
+#: mymwebsite/templates/videos.html:67
 msgid "Using Augmented Reality"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:84
+#: mymwebsite/templates/videos.html:82
 msgid "Capturing Images and Videos"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:102
+#: mymwebsite/templates/videos.html:100
 msgid "Web App Videos"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:123
+#: mymwebsite/templates/videos.html:121
 msgid "Configuring VPs and TAGs"
 msgstr ""
 
-#: mymwebsite/templates/videos.html:138
+#: mymwebsite/templates/videos.html:136
 msgid "Media and Data"
 msgstr ""
